# VinoxOldGame

./: .gitignore  Cargo.toml  ImplementationNotes.md  LICENSE.md  README.md  TODO.md  chunk-example.rs  world.db  world.db-shm  world.db-wal
block-mesh-rs/src/: greedy.rs  simple.rs
block-mesh-rs/src/geometry/: face.rs
block-mesh-rs/src/greedy/: merge_strategy.rs
client/: Cargo.toml
client/assets/: base_player.bbmodel  base_player.gltf  player.gltf
client/assets/blocks/cobblestone/: cobblestone.ron
client/assets/blocks/concrete/: concrete.ron
client/assets/blocks/dirt/: dirt.ron
client/assets/blocks/glass/: glass.ron
client/assets/blocks/grass/: grass.ron
client/assets/blocks/greybrick/: greybrick.ron
client/assets/blocks/moss/: moss.ron
client/assets/blocks/wood/: wood.ron
client/assets/entities/Golem/: golem.gltf
client/src/: components.rs  main.rs  systems.rs
client/src/states/: loading.rs  menu.rs  mod.rs  splashscreen.rs
client/src/states/game/: input.rs  mod.rs  setup.rs
client/src/states/game/collision/: player.rs  plugin.rs
client/src/states/game/input/: player.rs  plugin.rs
client/src/states/game/networking/: components.rs  mod.rs  plugin.rs  syncing.rs
client/src/states/game/rendering/: meshing.rs  mod.rs  plugin.rs
client/src/states/game/ui/: plugin.rs
client/src/states/game/world/: chunk.rs
common/: Cargo.toml
common/assets/blocks/dirt/: dirt.ron
common/assets/blocks/grass/: grass.ron
common/assets/entities/Golem/: golem.ron
common/src/: lib.rs
common/src/game/: bundles.rs  mod.rs  storage.rs
common/src/game/scripting/: mod.rs
common/src/game/scripting/block/: block_descriptor.rs  load.rs  mod.rs
common/src/game/scripting/entity/: entity_descriptor.rs  load.rs  mod.rs
common/src/game/world/: chunk.rs
common/src/networking/: components.rs
server/: Cargo.toml
server/src/: main.rs
server/src/game/: mod.rs  setup.rs
server/src/game/world/: chunk.rs  generation.rs  mod.rs  storage.rs
server/src/networking/: components.rs  syncing.rs
