[workspace]
members = [
  "client",
  "server",
  "common"
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_renet = "0.0.6"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3