[workspace]
members = [
  "client",
  "server",
  "common",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_renet = "0.0.6"
mlua = { version = "0.8.7", features = ["lua54", "vendored", "serialize"] }
ron = "0.8.0"
bevy_rapier3d = "0.20.0"
bincode = "1.3.3"
serde = "1.0.152"
directories = "4.0.1"
diesel = {version = "2.0.3", features = ["sqlite"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


