[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
common = { path = "../common"}
bevy_ecs_tilemap = "0.9.0"
bevy = {workspace = true}
bevy_renet = {workspace = true}
iyes_loopless = "0.9.1"
belly = {git = "https://github.com/jkb0o/belly.git"}
serde = "1.0.152"
bincode = "1.3.3"
bevy_easings = "0.9.1"
bevy_rapier3d = "0.20.0"
bevy-inspector-egui = "0.17.0"
