[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
common = { path = "../common"}
bevy = {workspace = true}
bevy_renet = {workspace = true}
iyes_loopless = "0.9.1"
belly = {git = "https://github.com/jkb0o/belly.git"}
serde = {workspace=true}
bincode = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
bevy_easings = "0.9.1"
bevy_rapier3d = {workspace = true}
bevy-inspector-egui = "0.17.0"
directories = {workspace=true}
walkdir = "2.3.2"
# bevy-vfx-bag = "0.1.0"
