[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
common = { path = "../common"}
bevy = {workspace = true, features = ["basis-universal"]}
bevy_renet = {workspace = true}
iyes_loopless = "0.9.1"
belly = {git = "https://github.com/jkb0o/belly.git"}
serde = {workspace=true}
bincode = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
bevy_rapier3d = {workspace = true}
bevy_egui = "0.17.1"
directories = {workspace=true}
walkdir = "2.3.2"
zstd = "0.12.3"
bimap = "0.6.2"
futures-lite = "1.12.0"
bevy_atmosphere = "0.5.0"
itertools = "0.10.5"
renet_visualizer = { version="0.0.3", features=["bevy"] }
bevy_tweening = "0.6.0"
# bevy-vfx-bag = {git="https://github.com/torsteingrindvik/bevy-vfx-bag.git"}
