[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = {path = "../block-mesh-rs"}
bevy = {workspace = true}
bevy_rapier3d = {workspace = true}
bevy_renet = { workspace = true }
component = "0.1.0"
serde = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
strum = "0.24.1"
strum_macros = "0.24.1"
walkdir = "2.3.2"
directories = {workspace=true}
indexmap = "1.9.2"
diesel = {workspace=true}
serde-big-array = "0.5.0"
