[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
bevy = {workspace = true}
bevy_rapier3d = {workspace = true}
bevy_renet = { workspace = true }
component = "0.1.0"
serde = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
strum = "0.24.1"
strum_macros = "0.24.1"
walkdir = "2.3.2"
directories = {workspace=true}
indexmap = "1.9.2"
diesel = {workspace=true}
serde-big-array = {git = "https://github.com/est31/serde-big-array"}
rand = "0.8.5"
zstd = "0.12.3"
