[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {workspace = true}
bevy_rapier3d = {workspace = true}
bevy_quinnet = { workspace = true }
component = "0.1.0"
serde = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
strum = "0.24.1"
strum_macros = "0.24.1"
walkdir = "2.3.2"
directories = {workspace=true}
indexmap = "1.9.2"
diesel = {workspace=true}
serde-big-array = {git = "https://github.com/est31/serde-big-array"}
rand = "0.8.5"
zstd = "0.12.3"
