[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace=true}
bevy_renet = {workspace=true}
bincode = {workspace=true}
serde = {workspace=true}
common = {path="../common"}
iyes_loopless = "0.9.1"
bevy_rapier3d = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
directories = {workspace=true}
noise = "0.8.2"
futures-lite = "1.12.0"
rand = "0.8.5"
zstd = "0.12.3"
bimap = "0.6.2"

