[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
bevy = {workspace=true}
bevy_renet = {workspace=true}
bincode = {workspace=true}
serde = {workspace=true}
common = {path="../common"}
iyes_loopless = "0.9.1"
bevy_rapier3d = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
directories = {workspace=true}
noise = "0.8.2"
futures-lite = "1.12.0"
rand = "0.8.5"
zstd = "0.12.3"
rusqlite = {version="0.28.0", features=["bundled"]}
bevy_egui = "0.17.1"
renet_visualizer = { version="0.0.3", features=["bevy"] }
rustc_data_structures = "0.0.1"


