[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {workspace=true}
bevy_quinnet = {workspace=true}
bincode = {workspace=true}
serde = {workspace=true}
common = {path="../common"}
iyes_loopless = "0.9.1"
bevy_rapier3d = {workspace=true}
mlua = {workspace=true}
ron = {workspace=true}
directories = {workspace=true}
noise = "0.8.2"
futures-lite = "1.12.0"
rand = "0.8.5"
zstd = "0.12.3"
rusqlite = {version="0.28.0", features=["bundled"]}
rustc_data_structures = "0.0.1"


